Fix extraneous commas, and overflow to fix double bar problem

--- a/inst/templates/knitr_bootstrap.css
+++ b/inst/templates/knitr_bootstrap.css
@@ -2,7 +2,7 @@
 -------------------------------------------------- */
 .container-fluid {
   padding-left: 0 !important;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .row-fluid {
   margin-left: 0%;
